[tool.poetry]
name = "timescale_utilities"
version = "0.1.0"
description = "testing different utilities for timescaledb"
authors = ["BraKistad <brakistad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.5"
pytest = "^7.1.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
