[tool.poetry]
name = "timescale_utilities"
version = "0.1.0"
description = "testing different utilities for timescaledb"
authors = ["BraKistad <brakistad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.5"
pytest = "^7.1.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
fastapi = "^0.78.0"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.17.6"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
